# MagPiTutorial5

./: CMakeLists.txt  adctemp.S  main.c
